# bughunt

./: .gitignore  LICENSE  README.md  RESULTS.md
answers/: README.md  (+4 more)
harness/: REFERENCES.md  config.toml  pricing.json  pyproject.toml  review_prompt.md  review_prompt_diff.md
harness/bench/: __init__.py  cli.py  config.py  diffmode.py  judge.py  pricing.py  report.py  runner.py  summary.py
harness/docs/: authoring-advanced.md  diff-mode.md  glossary.md  manual-tools.md
harness/reports/: index.html  python-basic__claude__claude-opus-4-8__high.md  python-basic__claude__claude-opus-4-8__low.md  python-basic__claude__claude-opus-4-8__max.md  python-basic__claude__claude-opus-4-8__medium.md  python-basic__claude__claude-opus-4-8__xhigh.md  python-basic__coderabbit__cli__default.md  python-basic__codex__gpt-5.5__high.md  python-basic__codex__gpt-5.5__low.md  python-basic__codex__gpt-5.5__medium.md  python-basic__codex__gpt-5.5__xhigh.md  python-basic__cursor-agent__composer-2.5-fast__default.md  python-basic__cursor__bugbot__default.md  python-crossfile__claude__claude-opus-4-8__high.md  python-crossfile__claude__claude-opus-4-8__low.md  python-crossfile__claude__claude-opus-4-8__max.md  python-crossfile__claude__claude-opus-4-8__medium.md  python-crossfile__claude__claude-opus-4-8__xhigh.md  python-crossfile__coderabbit__cli__default.md  python-crossfile__codex__gpt-5.5__high.md  python-crossfile__codex__gpt-5.5__low.md  python-crossfile__codex__gpt-5.5__medium.md  python-crossfile__codex__gpt-5.5__xhigh.md  python-crossfile__cursor-agent__composer-2.5-fast__default.md  python-crossfile__cursor__bugbot__default.md  python-pricing__claude__claude-opus-4-8__high.md  python-pricing__claude__claude-opus-4-8__low.md  python-pricing__claude__claude-opus-4-8__max.md  python-pricing__claude__claude-opus-4-8__medium.md  python-pricing__claude__claude-opus-4-8__xhigh.md  python-pricing__coderabbit__cli__default.md  python-pricing__codex__gpt-5.5__high.md  python-pricing__codex__gpt-5.5__low.md  python-pricing__codex__gpt-5.5__medium.md  python-pricing__codex__gpt-5.5__xhigh.md  python-pricing__cursor-agent__composer-2.5-fast__default.md  python-pricing__cursor__bugbot__default.md  python-scheduling__claude__claude-opus-4-8__high.md  python-scheduling__claude__claude-opus-4-8__low.md  python-scheduling__claude__claude-opus-4-8__max.md  (+10 more)
(+229 files in other folders)
