[project]
name = "bughunt-harness"
version = "0.1.0"
description = "Interactive benchmark harness for AI code-review tools"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "questionary>=2.0",
    "rich>=13",
    "pyyaml>=6",
]

[project.scripts]
bench = "bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bench"]
