[project]
name = "python-basic"
version = "0.1.0"
description = "A small account & file vault service (code-review benchmark target — python/basic)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vault_api"]
