[project]
name = "python-crossfile"
version = "0.1.0"
description = "Embedded task-queue service (code-review benchmark target — python/crossfile)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taskqueue"]
