[project]
name = "python-pricing"
version = "0.1.0"
description = "Order pricing / billing engine (code-review benchmark target — python/pricing)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pricing"]
