[project]
name = "python-scheduling"
version = "0.1.0"
description = "Calendar / scheduling primitives (code-review benchmark target — python/scheduling)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/booking"]
